--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "3000:3000"
   krakend_ce:
-    image: devopsfaith/krakend:jose
+    image: devopsfaith/krakend:0.6.0
     volumes:
       - ./krakend:/etc/krakend
     ports:
