--- a/jwt-revoker/Dockerfile
+++ b/jwt-revoker/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir /app
 WORKDIR /app
 COPY . .
 
-RUN GOPROXY=https://goproxy.io go get -d -v ./...
+RUN go get -d -v ./...
 RUN go install .
 
 EXPOSE 8080
