Add small notice on KrakenD image due to `watch` tag usage.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3"
 services:
   krakend_ce:
+    # The :watch image restarts the service automatically when the configuration files change.
+    # Do not use this image in production, it's meant to speed up your testing and development.
     image: devopsfaith/krakend:watch
     volumes:
       - ./config/krakend:/etc/krakend
