--- a/images/jwt-revoker/Dockerfile
+++ b/images/jwt-revoker/Dockerfile
@@ -1,12 +1,12 @@
-FROM golang:1.15.8
+FROM golang:1.17.11
 
 RUN mkdir /app
 WORKDIR /app
 COPY . .
 
-RUN go get -d -v ./...
-RUN go install .
+RUN GOPROXY=https://goproxy.io go get -d -v ./...
+RUN go build .
 
 EXPOSE 8080
 
-CMD ["jwt-revoker"]
+CMD ["./jwt-revoker", "-server", "krakend_ce:1234"]
