--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,30 @@ services:
     ports:
       - "16686:16686"
       - "14268:14268"
+  elasticsearch:
+    image: elasticsearch:8.4.1
+    environment:
+      - "discovery.type=single-node"
+      - "xpack.security.enabled=false"
+      - "xpack.security.transport.ssl.enabled=false"
+      - "xpack.security.http.ssl.enabled=false"
+    ports:
+      - "19200:9200"
+      - "9300:9300"
+  kibana:
+    image: kibana:8.4.1
+    ports:
+      - "5601:5601"
+  logstash:
+    image: logstash:8.4.1
+    ports:
+      - "12201:12201/udp"
+      - "5044:5044"
+    environment:
+      - "xpack.monitoring.elasticsearch.url=http://elasticsearch:9200"
+    volumes:
+      - ./config/logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    command: ["-f", "/usr/share/logstash/pipeline/logstash.conf"]
   rabbitmq:
     image: rabbitmq:3-management
     ports:
