--- a/config/grafana/datasources/all.yml
+++ b/config/grafana/datasources/all.yml
@@ -1,14 +1,72 @@
-apiVersion: 1
+{
+  "apiVersion": 1,
+  "datasources": [
+    {
+      "access": "proxy",
+      "editable": true,
+      "is_default": true,
+      "name": "influx",
+      "org_id": 1,
+      "type": "influxdb",
+      "url": "http://influxdb:8086",
+      "version": 1,
+      "user": "krakend-dev",
+      "password": "pas5w0rd",
+      "database": "krakend"
+    },
+    {
+      "id": 3,
+      "uid": "b2a29c2f-ef77-4ba5-b934-b42aaa6ae3b4",
+      "orgId": 1,
+      "name": "Loki",
+      "type": "loki",
+      "typeName": "Loki",
+      "typeLogoUrl": "/public/app/plugins/datasource/loki/img/loki_icon.svg",
+      "access": "proxy",
+      "url": "http://loki:3100",
+      "user": "",
+      "database": "",
+      "basicAuth": false,
+      "isDefault": false,
+      "jsonData": {},
+      "readOnly": false
+    },
+    {
+      "id": 1,
+      "uid": "b9564da7-2fba-447a-934e-e0217745974e",
+      "orgId": 1,
+      "name": "Prometheus",
+      "type": "prometheus",
+      "typeName": "Prometheus",
+      "typeLogoUrl": "/public/app/plugins/datasource/prometheus/img/prometheus_logo.svg",
+      "access": "proxy",
+      "url": "http://prometheus:9090",
+      "user": "",
+      "database": "",
+      "basicAuth": false,
+      "isDefault": true,
+      "jsonData": {
+        "httpMethod": "POST"
+      },
+      "readOnly": false
+    },
+    {
+      "id": 2,
+      "uid": "e7eea071-7df9-44ff-8a6a-155248d05f42",
+      "orgId": 1,
+      "name": "Tempo",
+      "type": "tempo",
+      "typeName": "Tempo",
+      "typeLogoUrl": "/public/app/plugins/datasource/tempo/img/tempo_logo.svg",
+      "access": "proxy",
+      "url": "http://tempo:3200",
+      "user": "",
+      "database": "",
+      "basicAuth": false,
+      "isDefault": false,
+      "jsonData": {},
+      "readOnly": false
+    }
+  ]
+}
 
-datasources:
--  access: 'proxy'
-   editable: true
-   is_default: true
-   name: 'influx'
-   org_id: 1
-   type: 'influxdb'
-   url: 'http://influxdb:8086'
-   version: 1
-   user: krakend-dev
-   password: pas5w0rd
-   database: krakend
