--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,8 @@ services:
       - krakend_ce
     restart: always
   keycloak:
-    image: quay.io/keycloak/keycloak:26.0
+    build:
+      context: images/keycloak
     ports:
       - "8085:8080"
     volumes:
@@ -94,4 +95,4 @@ services:
     environment:
       - KEYCLOAK_ADMIN=admin
       - KEYCLOAK_ADMIN_PASSWORD=admin
-    command: ["start-dev", "--import-realm"]
+    command: ["start", "--http-enabled=true", "--hostname-strict=false", "--import-realm", "--optimized"]
