Set the /token jwk file as local to avoid problems with the backend serving an incorrect content type.
Signed-off-by: Daniel Ortiz <dortiz@krakend.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "./config/grafana/datasources/all.yml:/etc/grafana/provisioning/datasources/all.yml"
       - "./config/grafana/dashboards/all.yml:/etc/grafana/provisioning/dashboards/all.yml"
       - "./config/grafana/krakend:/var/lib/grafana/dashboards/krakend"
+      - "./data/jwk/symmetric.json:/opt/krakend/jwk-symmetric.json"
   influxdb:
     image: influxdb:1.8.10
     environment:
